--- a/1. Fun with headings and titles/1.1 Add a title to a website.html
+++ b/1. Fun with headings and titles/1.1 Add a title to a website.html
@@ -1,4 +1,8 @@
-<!-- Enter your code below this line-->
-
+<!DOCTYPE html>
+<html>
+<head>
+   <!-- Enter your code below this line-->
+<!-- change the title to Annie's Wiki -->
+  
 <!-- Enter your code above this line-->
-
+  </head>
