--- a/Add some text/Add a paragraph about HTML.html
+++ b/Add some text/Add a paragraph about HTML.html
@@ -7,6 +7,7 @@
 <h1>Welcome to annie's wiki</h1>
 <h2>About Programming</h2>
 <p>Programming is a way to “instruct the computer to perform various tasks”. Confusing? Let us understand the definition deeply. “Instruct the computer”: this basically means that you provide the computer a set of instructions that are written in a language that the computer can understand.</p>
+<h3>About HTML</h3>
 <!-- Enter your code below this line-->
 <!-- Add this para about HTML : Hypertext Markup Language (HTML) is the standard markup language for documents designed to be displayed in a web browser. ... HTML provides a means to create structured documents by denoting structural semantics for text such as headings, paragraphs, lists, links, quotes and other items. -->
 <!-- Enter your code above this line-->
