--- a/Add some text/Add a paragraph about HTML.html
+++ b/Add some text/Add a paragraph about HTML.html
@@ -11,3 +11,4 @@
 <!-- Enter your code below this line-->
 <!-- Add this para about HTML : Hypertext Markup Language (HTML) is the standard markup language for documents designed to be displayed in a web browser. ... HTML provides a means to create structured documents by denoting structural semantics for text such as headings, paragraphs, lists, links, quotes and other items. -->
 <!-- Enter your code above this line-->
+    </body>
