Updated with more information

--- a/Forms Challenges/Make a label and a input in a form.html
+++ b/Forms Challenges/Make a label and a input in a form.html
@@ -13,6 +13,9 @@
 <p>Cascading Style Sheets is a style sheet language used for describing the presentation of a document written in a markup language such as HTML. CSS is a cornerstone technology of the World Wide Web, alongside HTML and JavaScript.</p>
 <!-- Add a form here -->
 <!-- With inputs and labels of First name and last name -->
+<!-- In both the labels add a for attribute for firstname saying fname and last name lname -->
+<!-- The Input types will be text and a default value attribute for first name: John , Last name: Doe -->
+<!-- Also add a name attribute in input tag for firstname saying fname and last name lname -->
 <!-- Enter your code below this line-->
 
 <!-- Enter your code above this line-->
