Added instructions for submit button

--- a/Forms Challenges/Make a label and a input in a form.html
+++ b/Forms Challenges/Make a label and a input in a form.html
@@ -16,6 +16,7 @@
 <!-- In both the labels add a for attribute for firstname saying fname and last name lname -->
 <!-- The Input types will be text and a default value attribute for first name: John , Last name: Doe -->
 <!-- Also add a name attribute in input tag for firstname saying fname and last name lname -->
+<!-- Also remeber to add a sumbit button with type attribute: sumbit and value attribute: sumbit -->
 <!-- Enter your code below this line-->
 
 <!-- Enter your code above this line-->
