--- a/Fun with links/Add a link to a website.html
+++ b/Fun with links/Add a link to a website.html
@@ -34,7 +34,7 @@ tr:nth-child(even) {
   <label for="lname">Last name:</label><br>
   <input type="text" name="lname" value="Doe"><br><br>
   <input type="submit" value="Submit">
-</form>
+</form><br>
 <table>
   <tr>
     <th>List of Programming languages</th>
