--- a/Make a portfolio page/Portfolio.html
+++ b/Make a portfolio page/Portfolio.html
@@ -1,1 +1,1 @@
-<!-- Make a personal potfolio page with the example given in the root directory -->
+<!-- Make a personal portifolio page with the example given in the root directory -->
