Added link to stylesheet

--- a/Make a tribute page/tribute page example.html
+++ b/Make a tribute page/tribute page example.html
@@ -1,4 +1,5 @@
 <main id="main">
+  <link rel= stylesheet href="tribute styles example.css">
   <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
 
   <h1 id="title">Mohandas Karamchand Gandhi</h1>
