--- a/Create a survey form/survey example.html
+++ b/Create a survey form/survey example.html
@@ -1,4 +1,4 @@
-<script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
+<link rel= stylesheet href="survey styles.css"/>
 <div class="container">
   <header class="header">
     <h1 id="title" class="text-center">Hridaya's Survey Form</h1>
