--- a/Create a survey form/survey example.html
+++ b/Create a survey form/survey example.html
@@ -1,4 +1,4 @@
-<link rel= stylesheet href="survey styles.css"/>
+<link rel= stylesheet href="survey styles example.css"/>
 <div class="container">
   <header class="header">
     <h1 id="title" class="text-center">Hridaya's Survey Form</h1>
