--- a/Make a tribute page/tribute page.html
+++ b/Make a tribute page/tribute page.html
@@ -1,1 +1,2 @@
 <!-- Code a tribute page with help of the example in root directory -->
+<!-- You can use my styles example file for reference if you don't know CSS -->
