--- a/Make a portfolio page/Portfolio.html
+++ b/Make a portfolio page/Portfolio.html
@@ -1,1 +1,2 @@
 <!-- Make a personal portifolio page with the example given in the root directory -->
+<!-- You can use my styles if you don't know CSS -->
