--- a/Create a survey form/Survey Form Example.html
+++ b/Create a survey form/Survey Form Example.html
@@ -1,4 +1,4 @@
-<link rel= stylesheet href="survey styles example.css"/>
+<link rel= stylesheet href="Survey Form Styles.css"/>
 <div class="container">
   <header class="header">
     <h1 id="title" class="text-center">Hridaya's Survey Form</h1>
