--- a/Video Embeds/1.1 Add a Normal video to Annie's Wiki.html
+++ b/Video Embeds/1.1 Add a Normal video to Annie's Wiki.html
@@ -69,6 +69,7 @@ tr:nth-child(even) {
   <tr>
     </table>
   <!-- Add a video of Programming of this link : https://www.youtube.com/watch?v=HIj8wU_rGIU -->
+  <!-- With width=420 height=315 -->
   
 <!-- Enter your code below this line-->
 
