--- a/Video Embeds/Solutions/1.3 Add a Muted video to Annie's Wiki.html
+++ b/Video Embeds/Solutions/1.3 Add a Muted video to Annie's Wiki.html
@@ -69,6 +69,6 @@ tr:nth-child(even) {
   <tr>
     </table>
     <iframe width="420" height="315"
-src="https://www.youtube.com/embed/tgbNymZ7vqY?mute=1">
+src="https://www.youtube.com/embed/tgbNymZ7vqY?&mute=1">
 </iframe>
 </body>
