--- a/Video Embeds/Solutions/1.5 Add Controls to a Video in Annie's Wiki.html
+++ b/Video Embeds/Solutions/1.5 Add Controls to a Video in Annie's Wiki.html
@@ -69,6 +69,6 @@ tr:nth-child(even) {
   <tr>
     </table>
     <iframe width="420" height="315"
-src="https://www.youtube.com/embed/tgbNymZ7vqY?&controls=1">
+src="https://www.youtube.com/embed/HIj8wU_rGIU?&controls=1">
 </iframe>
 </body>
