--- a/1. Fun with headings and titles/Solutions/1.1 Add a title to a website_Solution.html
+++ b/1. Fun with headings and titles/Solutions/1.1 Add a title to a website_Solution.html
@@ -1,4 +1,8 @@
 <!-- Enter your code below this line-->
+<!DOCTYPE html>
+<html>
+<head>
 <title>Annie's Wiki</title>
+</head>
 <!-- Enter your code above this line-->
 
