Update 1.3 Add a sub heading to Annie's website.html

--- a/1. Fun with headings and titles/Solutions/1.3 Add a sub heading to Annie's website.html
+++ b/1. Fun with headings and titles/Solutions/1.3 Add a sub heading to Annie's website.html
@@ -1,7 +1,11 @@
+<!DOCTYPE html>
+<html>
+<head>
 <title>Annie's Wiki</title>
-
+</head>
+<body>
 <h1>Welcome to Annie's Wiki</h1>
-
 <!-- Enter your code below this line-->
-
+<h2>About Programming</h2>
 <!-- Enter your code above this line-->
+</body>
