Update 1.3 Add a nested Un-ordered list.html

--- a/Fun with Lists/1.3 Add a nested Un-ordered list.html
+++ b/Fun with Lists/1.3 Add a nested Un-ordered list.html
@@ -5,6 +5,7 @@
 <ul>
 <li>Bakery Items</li>
 <li>Grocery Items</li>
+<li>Dairy Products</li>
 <!-- Add your own shopping items in a nested list -->
 <ul>
 </body>
