--- a/Add some text/2.3 Add a paragraph about Programming.html
+++ b/Add some text/2.3 Add a paragraph about Programming.html
@@ -7,6 +7,6 @@
 <h1>Welcome to annie's wiki</h1>
 <h2>About Programming</h2>
 <!-- Enter your code below this line-->
-<!-- Add a para of the following text about programming : Programming is a way to “instruct the computer to perform various tasks”. Confusing? Let us understand the definition deeply. “Instruct the computer”: this basically means that you provide the computer a set of instructions that are written in a language that the computer can understand. -->
+<!-- Add a paragraph of the following text about programming : Programming is a way to “instruct the computer to perform various tasks”. Confusing? Let us understand the definition deeply. “Instruct the computer”: this basically means that you provide the computer a set of instructions that are written in a language that the computer can understand. -->
 <!-- Enter your code above this line-->
     </body>
