Update 1.2 Add a main heading for Annie's website_Solution.html

--- a/1. Fun with headings and titles/Solutions/1.2 Add a main heading for Annie's website_Solution.html
+++ b/1. Fun with headings and titles/Solutions/1.2 Add a main heading for Annie's website_Solution.html
@@ -2,7 +2,5 @@
 <html>
 <head>
 <title>Annie's Wiki</title>
-
-<!-- Enter your code below this line-->
 <h1>Welcome to Annie's Wiki</h1>
-<!-- Enter your code above this line-->
+<head>
