Fix: Corrected grammar and added html tags
Html format was incomple needed correction. Also, corrected some of the grammar

--- a/1. Fun with headings and titles/1.1 Add a title to a website.html
+++ b/1. Fun with headings and titles/1.1 Add a title to a website.html
@@ -1,8 +1,13 @@
 <!DOCTYPE html>
 <html>
+
 <head>
    <!-- Enter your code below this line-->
-<!-- change the title to Annie's Wiki -->
-  
-<!-- Enter your code above this line-->
-  </head>
+   <!-- change the title to: Annie's Wiki -->
+
+   <!-- Enter your code above this line-->
+</head>
+
+<body></body>
+
+</html>
