--- a/1. Fun with headings and titles/1.2 Add a main heading for Annie's website.html
+++ b/1. Fun with headings and titles/1.2 Add a main heading for Annie's website.html
@@ -1,10 +1,14 @@
 <!DOCTYPE html>
 <html>
+
 <head>
-    <title>Annie's Wiki</title>
+  <title>Annie's Wiki</title>
 </head>
+
 <body>
-<!-- Enter your code below this line-->
-<!-- Add a heading as Welcome to Annie's Wiki -->
-<!-- Enter your code above this line-->
-  </body>
+  <!-- Enter your code below this line-->
+  <!-- Add a heading: Welcome to Annie's Wiki -->
+  <!-- Enter your code above this line-->
+</body>
+
+</html>
