--- a/1. Fun with headings and titles/1.4 Add another subheading in About Programming.html
+++ b/1. Fun with headings and titles/1.4 Add another subheading in About Programming.html
@@ -1,13 +1,17 @@
 <!DOCTYPE html>
 <html>
+
 <head>
     <title>Annie's Wiki</title>
 </head>
+
 <body>
-<h1>Welcome to Annie's Wiki</h1>
-<h2>About Programming</h2>
-<!-- Enter your code below this line-->
-<!-- Add a subheading in the subheading about programming to Annie's wiki named About HTML -->
-<!-- Enter your code above this line-->
+    <h1>Welcome to Annie's Wiki</h1>
+    <h2>About Programming</h2>
+    <!-- Enter your code below this line-->
+    <!-- Add another subheading with a name, About HTML -->
+    <!-- Enter your code above this line-->
 
 </body>
+
+</html>
