--- a/1. Fun with headings and titles/Solutions/1.1 Add a title to a website_Solution.html
+++ b/1. Fun with headings and titles/Solutions/1.1 Add a title to a website_Solution.html
@@ -1,7 +1,12 @@
 <!DOCTYPE html>
 <html>
+
 <head>
-<title>Annie's Wiki</title>
+    <!-- change the title to: Annie's Wiki -->
+    <title>Annie's Wiki</title>
 </head>
 
+<body>
+</body>
 
+</html>
