--- a/1. Fun with headings and titles/Solutions/1.5 Add another subheading in About Programming(CSS)_Solution.html
+++ b/1. Fun with headings and titles/Solutions/1.5 Add another subheading in About Programming(CSS)_Solution.html
@@ -1,14 +1,19 @@
 <!DOCTYPE html>
 <html>
+
 <head>
     <title>Annie's Wiki</title>
 </head>
+
 <body>
-<h1>Welcome to Annie's Wiki</h1>
-<h2>About Programming</h2>
-<h3>About HTML</h3>
-<!-- Enter your code below this line-->
-<h3>About CSS</h3>
-<!-- Enter your code above this line-->
+    <h1>Welcome to Annie's Wiki</h1>
+    <h2>About Programming</h2>
+    <h3>About HTML</h3>
+    <!-- Enter your code below this line-->
+    <!-- Add a subheading below the subheading: About Programming named, About CSS -->
+    <h3>About CSS</h3>
+    <!-- Enter your code above this line-->
 
 </body>
+
+</html>
