--- a/Add some text/2.1 Add a paragraph about CSS.html
+++ b/Add some text/2.1 Add a paragraph about CSS.html
@@ -1,15 +1,19 @@
 <!DOCTYPE html>
 <html>
+
 <head>
-    <title>Annie's Wiki</title>
-  </head>
+  <title>Annie's Wiki</title>
+</head>
+
 <body>
-<h1>Welcome to annie's wiki</h1>
-<h2>About Programming</h2>
-<p>Programming is a way to “instruct the computer to perform various tasks”. Confusing? Let us understand the definition deeply. “Instruct the computer”: this basically means that you provide the computer a set of instructions that are written in a language that the computer can understand.</p>
-<h3>About HTML</h3>
-<h3>About CSS</h3>
-<!-- Enter your code below this line-->
-<!-- Add this paragraph about CSS : Cascading Style Sheets is a style sheet language used for describing the presentation of a document written in a markup language such as HTML. CSS is a cornerstone technology of the World Wide Web, alongside HTML and JavaScript. -->
-<!-- Enter your code above this line-->
-    </body>
+  <h1>Welcome to annie's wiki</h1>
+  <h2>About Programming</h2>
+  <p>Programming is a way to <strong>“instruct the computer to perform various tasks” </strong>. Confusing? Let us
+    understand the definition deeply. “Instruct the computer”: this basically means that you provide the computer a set
+    of instructions that are written in a language that the computer can understand.</p>
+  <h3>About HTML</h3>
+  <h3>About CSS</h3>
+  <!-- Enter your code below this line-->
+  <!-- Add this paragraph about CSS : Cascading Style Sheets is a style sheet language used for describing the presentation of a document written in a markup language such as HTML. CSS is a cornerstone technology of the World Wide Web, alongside HTML and JavaScript. -->
+  <!-- Enter your code above this line-->
+</body>
