Update 2.2 Add a paragraph about HTML.html

--- a/Add some text/2.2 Add a paragraph about HTML.html
+++ b/Add some text/2.2 Add a paragraph about HTML.html
@@ -11,5 +11,6 @@
 <!-- Enter your code below this line-->
 <!-- Add this paragraph about HTML : Hypertext Markup Language (HTML) is the standard markup language for documents designed to be displayed in a web browser. ... HTML provides a means to create structured documents by denoting structural semantics for text such as headings, paragraphs, lists, links, quotes and other items. -->
 <!-- Enter your code above this line-->
-    <h3>About CSS</h3>
-    </body>
+<h3>About CSS</h3>
+<p>Cascading Style Sheets is a style sheet language used for describing the presentation of a document written in a markup language such as HTML. CSS is a cornerstone technology of the World Wide Web, alongside HTML and JavaScript.</p>
+</body>
