Update 3.1 Add a Un-Ordered List.html

--- a/Fun with Lists/3.1 Add a Un-Ordered List.html
+++ b/Fun with Lists/3.1 Add a Un-Ordered List.html
@@ -2,6 +2,8 @@
 <html>
 <body>
 <h1>My Shopping List</h1>
+<!-- Add your Code Below this Line -->
 <!-- Add your own shopping items in an unordered list -->
+<!-- Add your Code Above this Line -->
 </body>
 </html>
