Update 1.1 Add a title to a website.html

--- a/1. Fun with headings and titles/1.1 Add a title to a website.html
+++ b/1. Fun with headings and titles/1.1 Add a title to a website.html
@@ -1,8 +1,15 @@
 <!DOCTYPE html>
 <html>
+   
 <head>
    <!-- Enter your code below this line-->
-<!-- change the title to Annie's Wiki -->
+   <!-- change the title to: Annie's Wiki -->
+
+   <!-- Enter your code above this line-->
+</head>
+
+<body>
   
-<!-- Enter your code above this line-->
-  </head>
+</body>
+
+</html>
