Update 1.2 Add a main heading for Annie's website_Solution.html

--- a/1. Fun with headings and titles/Solutions/1.2 Add a main heading for Annie's website_Solution.html
+++ b/1. Fun with headings and titles/Solutions/1.2 Add a main heading for Annie's website_Solution.html
@@ -1,6 +1,12 @@
 <!DOCTYPE html>
 <html>
+  
 <head>
-<title>Annie's Wiki</title>
-<h1>Welcome to Annie's Wiki</h1>
-<head>
+    <title>Annie's Wiki</title>
+    <!-- Add a heading: Welcome to Annie's Wiki -->
+    <h1>Welcome to Annie's Wiki</h1>
+</head>
+
+<body></body>
+
+</html>
