--- a/1. Fun with headings and titles/Solutions/1.3 Add a sub heading to Annie's website_Solution.html
+++ b/1. Fun with headings and titles/Solutions/1.3 Add a sub heading to Annie's website_Solution.html
@@ -1,9 +1,15 @@
 <!DOCTYPE html>
 <html>
+  
 <head>
-<title>Annie's Wiki</title>
+   <title>Annie's Wiki</title>
 </head>
 <body>
-<h1>Welcome to Annie's Wiki</h1>
-<h2>About Programming</h2>
-</body>
+    <h1>Welcome to Annie's Wiki</h1>
+    <!-- Enter your code below this line-->
+    <!-- Add a subheading to Annie's wiki named, About Programming -->
+    <h2>About Programming</h2>
+    <!-- Enter your code above this line-->
+  </body>
+
+  </html>
