--- a/1. Fun with headings and titles/Solutions/1.4 Add a subheading in About Programming(HTML)_Solution.html
+++ b/1. Fun with headings and titles/Solutions/1.4 Add a subheading in About Programming(HTML)_Solution.html
@@ -4,9 +4,13 @@
     <title>Annie's Wiki</title>
 </head>
 <body>
-<h1>Welcome to Annie's Wiki</h1>
-<h2>About Programming</h2>
-
-<h3>About HTML</h3>
-
+    <h1>Welcome to Annie's Wiki</h1>
+    <h2>About Programming</h2>
+    <!-- Enter your code below this line-->
+    <!-- Add a another subheading with a name, About HTML -->
+    <h3>About HTML</h3>
+    <!-- Enter your code above this line-->
+    
 </body>
+    
+</html> 
