--- a/1. Fun with headings and titles/1.1 Add a title to a website.html
+++ b/1. Fun with headings and titles/1.1 Add a title to a website.html
@@ -2,10 +2,7 @@
 <html>
    
 <head>
-   <!-- Enter your code below this line-->
-   <!-- change the title to: Annie's Wiki -->ac
-
-   <!-- Enter your code above this line-->
+   <title>Annie's Wiki</title>
 </head>
 
 <body>
