--- a/1. Fun with headings and titles/1.1 Add a title to a website.html
+++ b/1. Fun with headings and titles/1.1 Add a title to a website.html
@@ -4,7 +4,7 @@
 <head>
    <!-- Enter your code below this line-->
    <!-- change the title to: Annie's Wiki -->
-
+   <title>Website title</title>
    <!-- Enter your code above this line-->
 </head>
 
